--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -111,6 +111,23 @@
   number = {10}
 }
 
+@article{ashtonComparisonsStructureMixed1992,
+  title = {Comparisons of {{Structure Among Mixed Dipterocarp Forests}} of {{North}}-{{Western Borneo}}},
+  author = {Ashton, Peter S. and Hall, Pamela},
+  date = {1992},
+  journaltitle = {Journal of Ecology},
+  volume = {80},
+  pages = {459--481},
+  publisher = {{[Wiley, British Ecological Society]}},
+  issn = {0022-0477},
+  doi = {10.2307/2260691},
+  abstract = {1. Relationships between lowland rain-forest structure, dynamics and site conditions were examined by the establishment of plots and profile diagrams within mature-phase forest at 13 sites and with permanent plots at three of these sites where trees have been enumerated over 20 years. 2. Most forest structural measures were intercorrelated but forest stature was uncorrelated with HCl-extractable soil nutrient concentrations and was apparently related to topography, soil depth and soil water. The relationship between diameter and height varied between forests and was correlated with HCl-extractable P and Mg for dry-land sites. 3. Tall forests generally had more slender canopy trees for a given height than short forests. Vertical stratification was associated with the presence and stand density of emergent trees, which comprise an architecturally and floristically distinct guild. Where emergents are scattered or absent, the main canopy and understorey were dense and no vertical stratification of crowns was perceptible; where emergents formed a continuous canopy, the main canopy was sparse, the understorey less dense and tree crowns were more separated into two horizontal strata. This type of forest appears to be confined to continuously moist soils on lower slopes, flat or undulating land. 4. Leaf size in the subcanopy was positively correlated with measured soil nutrients, and with the relationship between diameter and height. Among canopy trees it was not correlated with soil nutrients, nor with other aspects of forest structure. 5. Plots were originally established within mature phase, avoiding canopy gaps. Since establishment, gaps have accumulated within the permanent plots. Tree mortality was significantly clustered on clay soils, but not on sandy soils where windthrow was apparently less frequent and trees more often died standing. 6. Mean proportional diameter increments of large trees were not correlated with measured soil nutrients; but mean proportional diameter increments of recruits were correlated with measured soil nutrients. 7. A guild of tree species with the seed and/or seedling characteristics and the fast growth of pioneers, but with plagiotropic branching and crowns which reach the forest canopy or even emerge above it, was an important component of the building phase on soils with high mineral concentrations, but was sparsely distributed on other soils. 8. Standing volume and net volume increment were dominated by the mature phase; but soil nutrients probably influenced volume increment in the building phase. 9. Two inland forests, Bukit Mersing and Lambir, exhibited no net change in stand volume over 20 years. At Bako, a coastal forest on shallow freely draining soils, stand volume increased by 15.9\% of the initial measurement. This increment occurred among trees of the largest diameter class while there was a net loss of volume in the small classes.},
+  eprint = {2260691},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KABW5M2K\\Ashton and Hall - 1992 - Comparisons of Structure Among Mixed Dipterocarp F.pdf},
+  number = {3}
+}
+
 @article{aspinwallConvergentAcclimationLeaf2016,
   title = {Convergent Acclimation of Leaf Photosynthesis and Respiration to Prevailing Ambient Temperatures under Current and Warmer Climates in {{Eucalyptus}} Tereticornis},
   author = {Aspinwall, Michael J. and Drake, John E. and Campany, Courtney and Vårhammar, Angelica and Ghannoum, Oula and Tissue, David T. and Reich, Peter B. and Tjoelker, Mark G.},
@@ -301,6 +318,25 @@
   keywords = {absorption efficiency,acclimation response,carotenoids,chlorophyll,cuticle,leaf mass per area,reflectance,resource availability},
   langid = {english},
   number = {2}
+}
+
+@article{banerjeeEffectVerticalCanopy2018,
+  title = {Effect of {{Vertical Canopy Architecture}} on {{Transpiration}}, {{Thermoregulation}} and {{Carbon Assimilation}}},
+  author = {Banerjee, Tirtha and Linn, Rodman},
+  date = {2018-04},
+  journaltitle = {Forests},
+  volume = {9},
+  pages = {198},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  doi = {10.3390/f9040198},
+  url = {https://www.mdpi.com/1999-4907/9/4/198},
+  urldate = {2021-05-31},
+  abstract = {Quantifying the impact of natural and anthropogenic disturbances such as deforestation, forest fires and vegetation thinning among others on net ecosystem—atmosphere exchanges of carbon dioxide, water vapor and heat—is an important aspect in the context of modeling global carbon, water and energy cycles. The absence of canopy architectural variation in horizontal and vertical directions is a major source of uncertainty in current climate models attempting to address these issues. This manuscript demonstrates the importance of considering the vertical distribution of foliage density by coupling a leaf level plant biophysics model with analytical solutions of wind flow and light attenuation in a horizontally homogeneous canopy. It is demonstrated that plant physiological response in terms of carbon assimilation, transpiration and canopy surface temperature can be widely different for two canopies with the same leaf area index (LAI) but different leaf area density distributions, under several conditions of wind speed, light availability, soil moisture availability and atmospheric evaporative demand.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GD4FHCC2\\Banerjee and Linn - 2018 - Effect of Vertical Canopy Architecture on Transpir.pdf;C\:\\Users\\Me\\Zotero\\storage\\GQMDLEFW\\Banerjee and Linn - 2018 - Effect of Vertical Canopy Architecture on Transpir.pdf},
+  issue = {4},
+  keywords = {canopy turbulence,carbon assimilation,stomatal regulation,thermoregulation,transpiration},
+  langid = {english},
+  number = {4}
 }
 
 @article{banerjeeExplainingConvectorEffect2017,
@@ -2026,6 +2062,22 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\PL22JTI4\\13580.html}
 }
 
+@article{gowerRapidEstimationLeaf1991,
+  title = {Rapid {{Estimation}} of {{Leaf Area Index}} in {{Conifer}} and {{Broad}}-{{Leaf Plantations}}},
+  author = {Gower, Stith T. and Norman, John M.},
+  date = {1991},
+  journaltitle = {Ecology},
+  volume = {72},
+  pages = {1896--1900},
+  issn = {1939-9170},
+  doi = {10.2307/1940988},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.2307/1940988},
+  urldate = {2021-06-01},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.2307/1940988},
+  langid = {english},
+  number = {5}
+}
+
 @article{grahamIsotopicCharacteristicsCanopies2014,
   title = {Isotopic Characteristics of Canopies in Simulated Leaf Assemblages},
   author = {Graham, Heather V. and Patzkowsky, Mark E. and Wing, Scott L. and Parker, Geoffrey G. and Fogel, Marilyn L. and Freeman, Katherine H.},
@@ -2130,6 +2182,7 @@
   urldate = {2021-05-30},
   abstract = {• Leaf respiration and its temperature response were measured in 4-m-tall, 1-yr-old Populus deltoides trees to assess the effect of within-canopy distribution of respiratory physiology on total foliar C exchange of a model ecosystem at Biosphere 2. • Over the course of five nights, air temperature was varied over a 10°C range and the steady-state rate of leaf respiration was measured. These data were then modeled to calculate the temperature response of leaf and canopy respiration. • Results indicate that there is considerable within-canopy variation in both the rate of respiration and its temperature response and that these variables are most strongly related to leaf carbohydrate and leaf N. Scaling these results to the ecosystem level demonstrates the importance of quantifying the vertical distribution of respiratory physiology, particularly at lower temperatures. • Simplifying assumptions regarding the variation in respiration and its temperature response with canopy height tend to result in an underestimation of the actual C loss if the assumptions are based on lower- or mid-canopy leaf physiology, but overestimate C loss if the model assumptions are based on upper-canopy physiology.},
   annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1046/j.1469-8137.2002.00410.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EZ4TUIKB\\Griffin et al. - 2002 - Canopy position affects the temperature response o.pdf;C\:\\Users\\Me\\Zotero\\storage\\AHG389Y6\\j.1469-8137.2002.00410.html},
   keywords = {Biosphere 2,carbohydrates,nitrogen,Populus deltoides (cottonwood),Q10,respiration,scaling,temperature},
   langid = {english},
   number = {3}
@@ -2256,6 +2309,26 @@
   eprinttype = {jstor},
   file = {C\:\\Users\\Me\\Zotero\\storage\\R5WD89Y5\\Hadley and Smith - 1987 - Influence of Krummholz Mat Microclimate on Needle .pdf},
   number = {1}
+}
+
+@article{hagemeierFunctionalCrownArchitecture2019,
+  title = {Functional {{Crown Architecture}} of {{Five Temperate Broadleaf Tree Species}}: {{Vertical Gradients}} in {{Leaf Morphology}}, {{Leaf Angle}}, and {{Leaf Area Density}}},
+  shorttitle = {Functional {{Crown Architecture}} of {{Five Temperate Broadleaf Tree Species}}},
+  author = {Hagemeier, Marc and Leuschner, Christoph},
+  date = {2019-03},
+  journaltitle = {Forests},
+  volume = {10},
+  pages = {265},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  doi = {10.3390/f10030265},
+  url = {https://www.mdpi.com/1999-4907/10/3/265},
+  urldate = {2021-06-01},
+  abstract = {The morphology, inclination, and spatial distribution of leaves in different parts of tree crowns are important determinants of the radiation, momentum, and gas exchange between the canopy and the atmosphere. However, it is not well known how these foliage-related traits vary among species differing in successional status. We measured leaf size, leaf mass area (LMA), leaf inclination (angle to the horizontal), leaf area density (LAD), total leaf area (leaf area index, LAI), and leaf area distribution across the crown in adult trees of five common, early to late-successional tree species (Betula pendula Roth, Quercus petraea (Matt.) Liebl., Carpinus betulus L., Tilia cordata Mill., and Fagus sylvatica L.) using different canopy access techniques and the harvest of foliated trees (29 trees in total). Leaf size increased continuously with crown depth in B. pendula and T. cordata but peaked at mid-crown in Q. petraea, C. betulus, and F. sylvatica to decrease toward the shade crown. By contrast, LMA and leaf angle decreased continuously with crown depth in all species, but the pattern of vertical change varied. The mid/late- and late-successional species had higher LAI, lower shade-leaf LMA, lower leaf angles (shade and sun crown), and higher LAD in the uppermost sun crown in comparison to early successional B. pendula. We assume that the most peripheral sun leaf layer is partly acting as a shield against excess radiation, with foliage properties depending on the structure of the shade crown. We conclude that the vertical change in leaf morphology, inclination, and spatial distribution in tree crowns is highly species specific, with partial dependence on the species\&rsquo; position in succession.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\QLVXK339\\Hagemeier and Leuschner - 2019 - Functional Crown Architecture of Five Temperate Br.pdf;C\:\\Users\\Me\\Zotero\\storage\\3YBGW6D5\\265.html},
+  issue = {3},
+  keywords = {<i>Betula pendula</i>,<i>Carpinus betulus</i>,<i>Fagus sylvatica</i>,<i>Quercus petraea</i>,<i>Tilia cordata</i>,adult trees,forest succession,leaf area density,leaf inclination,leaf mass area},
+  langid = {english},
+  number = {3}
 }
 
 @article{hansenVariationPigmentComposition2002a,
@@ -2447,6 +2520,40 @@
   issue = {5},
   langid = {english},
   number = {5}
+}
+
+@article{hutchisonArchitectureDeciduousForest1986,
+  title = {The {{Architecture}} of a {{Deciduous Forest Canopy}} in {{Eastern Tennessee}}, {{U}}.{{S}}.{{A}}.},
+  author = {Hutchison, B. A. and Matt, D. R. and McMillen, R. T. and Gross, L. J. and Tajchman, S. J. and Norman, J. M.},
+  date = {1986},
+  journaltitle = {Journal of Ecology},
+  volume = {74},
+  pages = {635--646},
+  publisher = {{[Wiley, British Ecological Society]}},
+  issn = {0022-0477},
+  doi = {10.2307/2260387},
+  abstract = {(1) The structural properties of the canopy of a mature stand of oak-hickory (mixed species, uneven-aged, deciduous) forest in eastern Tennessee, U.S.A., were measured along randomly-located vertical transects by a variety of techniques. (2) The overall distribution of the leaf-inclination angles was plagiophile although the leaf-angle distributions in canopy strata below the zone where crowns meet to close the canopy (15-17 m above the floor) were planophile. The woody-biomass inclination-angle distribution was erectophile. The mean, area-weighted, leaf-inclination angle for the whole canopy was 33⚬ to the horizontal; however, substantial differences existed among the major canopy strata. In the overstorey above the zone of closure, it was 38⚬; in the overstorey below crown closure, it was 20⚬; and in the sub-canopy, 10⚬. (3) The greatest leaf-area density was in the overstorey canopy where the (one-sided) leaf-area index (L) was over 3.5. The lower canopy strata contributed slightly over one additional unit, yielding a total L of about 4.9 for the stand. The silhouette-area index of woody biomass was about 0.6. Thus, the total plant-area index of this forest was about 5.5. (4) The mean area of individual leaves increased from the forest floor to midcanopy and decreased in the upper canopy. Generally, the mean dry weight of leaves increased with height, although some decline was observed in the uppermost portion of the canopy. The increase with height in mean leaf dry weight per unit of surface area was much more uniform than that of mean leaf dry weight. Because the rate of increase in leaf weight per unit of surface area was relatively constant among the three species compared, we speculate that this variable may serve as a useful characterization of canopies at particular sites.},
+  eprint = {2260387},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\GP6R6DUI\\Hutchison et al. - 1986 - The Architecture of a Deciduous Forest Canopy in E.pdf},
+  number = {3}
+}
+
+@article{hutchisonArchitectureDeciduousForest1986a,
+  title = {The {{Architecture}} of a {{Deciduous Forest Canopy}} in {{Eastern Tennessee}}, {{U}}.{{S}}.{{A}}.},
+  author = {Hutchison, B. A. and Matt, D. R. and McMillen, R. T. and Gross, L. J. and Tajchman, S. J. and Norman, J. M.},
+  date = {1986},
+  journaltitle = {Journal of Ecology},
+  volume = {74},
+  pages = {635--646},
+  publisher = {{[Wiley, British Ecological Society]}},
+  issn = {0022-0477},
+  doi = {10.2307/2260387},
+  abstract = {(1) The structural properties of the canopy of a mature stand of oak-hickory (mixed species, uneven-aged, deciduous) forest in eastern Tennessee, U.S.A., were measured along randomly-located vertical transects by a variety of techniques. (2) The overall distribution of the leaf-inclination angles was plagiophile although the leaf-angle distributions in canopy strata below the zone where crowns meet to close the canopy (15-17 m above the floor) were planophile. The woody-biomass inclination-angle distribution was erectophile. The mean, area-weighted, leaf-inclination angle for the whole canopy was 33⚬ to the horizontal; however, substantial differences existed among the major canopy strata. In the overstorey above the zone of closure, it was 38⚬; in the overstorey below crown closure, it was 20⚬; and in the sub-canopy, 10⚬. (3) The greatest leaf-area density was in the overstorey canopy where the (one-sided) leaf-area index (L) was over 3.5. The lower canopy strata contributed slightly over one additional unit, yielding a total L of about 4.9 for the stand. The silhouette-area index of woody biomass was about 0.6. Thus, the total plant-area index of this forest was about 5.5. (4) The mean area of individual leaves increased from the forest floor to midcanopy and decreased in the upper canopy. Generally, the mean dry weight of leaves increased with height, although some decline was observed in the uppermost portion of the canopy. The increase with height in mean leaf dry weight per unit of surface area was much more uniform than that of mean leaf dry weight. Because the rate of increase in leaf weight per unit of surface area was relatively constant among the three species compared, we speculate that this variable may serve as a useful characterization of canopies at particular sites.},
+  eprint = {2260387},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\6PQ6D3UJ\\Hutchison et al. - 1986 - The Architecture of a Deciduous Forest Canopy in E.pdf},
+  number = {3}
 }
 
 @article{huveResponsesAspenLeaves2019,
@@ -2641,6 +2748,13 @@
   abstract = {Because rates of migration and genetic adaptation are slow, individual trees must initially acclimate to climate change via individual-level plasticity. Therefore, when predicting distribution and persistence of tree species under future climate change scenarios, we must take into account geographical variation in intra-individual plasticity. Here, we investigated geographical variation of intra-individual plasticity of Fagus crenata Blume (Japanese beech), a dominant species in late-successional, cool-temperate forests of Japan. We compared within-crown variation of leaf morphology (intra-crown leaf plasticity, ILP) among 13 sites across the full distribution range of F. crenata. Generally, ILP was lower for trees in the Pacific than Japan-Sea genetic lineages, low for trees in southern sites, and high for trees in sites near the northern and altitudinal range edges. Among the 13 sites, ILP was correlated with environmental variables associated with temperature. Positive correlation between ILP and temperature variation suggested that environmental perturbation selects for high intra-individual plasticity near northern and altitudinal range edges where F. crenata is expanding its distribution range. On the other hand, low ILP of trees in Pacific and southern sites, comprising geographically isolated populations, may reflect low acclimation potential to environmental perturbation. This could lead to local extinction if climatic conditions exceed the range of tolerance resulting in retreat of the Pacific and southern range edges of F. crenata in Japan.},
   keywords = {Acclimation,Distribution range,Geographical variation,Habitat fragmentation,Leaf functional trait,Local adaptation},
   langid = {english}
+}
+
+@book{jarvisSingleStomaSingle,
+  title = {A. {{The Single Stoma}}. {{B}}. {{The Single Leaf}}.},
+  author = {Jarvis, P. G. and Mcnaughton, K. G. and The, C. and Plant, Individual},
+  abstract = {null},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\8D9DS5ID\\Jarvis et al. - A. The Single Stoma. B. The Single Leaf..pdf;C\:\\Users\\Me\\Zotero\\storage\\K7Z3K92K\\download.html}
 }
 
 @incollection{jarvisStomatalControlTranspiration1986,
@@ -3054,6 +3168,23 @@
   abstract = {Abstract. Photosynthetic acclimation of deciduous broad-leaved tree species was studied along a vertical gradient within the canopy of a multi-species deciduou},
   langid = {english},
   number = {12-13}
+}
+
+@article{koikeCanopyStructureTropical1993,
+  title = {Canopy {{Structure}} of a {{Tropical Rain Forest}} and the {{Nature}} of an {{Unstratified Upper Layer}}},
+  author = {Koike, F. and {Syahbuddin}},
+  date = {1993},
+  journaltitle = {Functional Ecology},
+  volume = {7},
+  pages = {230--235},
+  publisher = {{[British Ecological Society, Wiley]}},
+  issn = {0269-8463},
+  doi = {10.2307/2389892},
+  abstract = {1. The two-dimensional distribution of foliage density was investigated in a vertical canopy section of forest in West Sumatra, using analysis of variance. 2. No significant continuous upper canopy layer could be found. However, there was significant stratification with a dense foliage layer below 15 m. The structure of the upper canopy (higher than 15 m) had an erect structure rather than being stratified. 3. Two hypotheses were examined to explain the unstratified upper canopy structure: (i) it was due to incomplete growth in height of the trees, leading to an unstratified forest canopy even in mono-specific forest, or (ii) it was caused by a mixture of species with different potential for height growth. The latter hypothesis was supported by the observations on tree growth.},
+  eprint = {2389892},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\X8W5S9GT\\Koike and Syahbuddin - 1993 - Canopy Structure of a Tropical Rain Forest and the.pdf},
+  number = {2}
 }
 
 @article{konigerXanthophyllCyclePigmentsPhotosynthetic1995,
@@ -5391,6 +5522,21 @@
   langid = {english}
 }
 
+@article{parkerVerticalProfileCanopy1989,
+  title = {Vertical {{Profile}} and {{Canopy Organization}} in a {{Mixed Deciduous Forest}}},
+  author = {Parker, Geoffrey G. and O'Neill, John P. and {work(s):}, Daniel Higman Reviewed},
+  date = {1989},
+  journaltitle = {Vegetatio},
+  volume = {85},
+  pages = {1--11},
+  abstract = {A combination of optical measurements of leaf heights and observations on litterfall provided a vertical and temporal description of the leaf community structure in a tall, Liriodendron forest on the Maryland coastal plain. Leaf area, mass, and number were bimodally distributed with height. Median leaf number occurs far below (7-8 m) and median leaf mass far above (22-23 m) the median leaf area (18-19 m). Tree species exhibited leaf stratification into 3 height levels: understory (0-10 m), mid canopy (10-25 m), and overstory (25-37 m). Species leaf area in litterfall was related to the species basal area, although representation of leaf number in litterfall was not correlated with stem numbers for species in the stand. Species also showed a clear phenological sequence of leaf fall.},
+  eprint = {20038549},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KRANXI8Z\\serc_Parker_ONeill_Higman_1989.pdf},
+  langid = {english},
+  number = {1/2}
+}
+
 @article{pauTropicalForestTemperature2018,
   title = {Tropical Forest Temperature Thresholds for Gross Primary Productivity},
   author = {Pau, Stephanie and Detto, Matteo and Kim, Youngil and Still, Christopher J.},
@@ -7167,6 +7313,25 @@
   number = {4}
 }
 
+@article{starkenburgTemperatureRegimesTurbulent2015,
+  title = {Temperature Regimes and Turbulent Heat Fluxes across a Heterogeneous Canopy in an {{Alaskan}} Boreal Forest},
+  author = {Starkenburg, Derek and Fochesatto, Gilberto J. and Cristóbal, Jordi and Prakash, Anupma and Gens, Rudiger and Alfieri, Joseph G. and Nagano, Hirohiko and Harazono, Yoshinobu and Iwata, Hiroki and Kane, Douglas L.},
+  date = {2015},
+  journaltitle = {Journal of Geophysical Research: Atmospheres},
+  volume = {120},
+  pages = {1348--1360},
+  issn = {2169-8996},
+  doi = {10.1002/2014JD022338},
+  url = {http://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2014JD022338},
+  urldate = {2021-06-01},
+  abstract = {We evaluate local differences in thermal regimes and turbulent heat fluxes across the heterogeneous canopy of a black spruce boreal forest on discontinuous permafrost in interior Alaska. The data were taken during an intensive observing period in the summer of 2013 from two micrometeorological towers 600 m apart in a central section of boreal forest, one in a denser canopy (DC) and the other in a sparser canopy, but under approximately similar atmospheric boundary layer (ABL) flow conditions. Results suggest that on average 34\% of the half-hourly periods in a day are nonstationary, primarily during night and during ABL transitions. Also, thermal regimes differ between the two towers; specifically between midnight and 0500 Alaska Standard Time (AKST) it is about 3°C warmer at DC. On average, the sensible heat flux at DC was greater. For midday periods, the difference between those fluxes exceeded 30\% of the measured flux and over 30 W m−2 in magnitude more than 60\% of the time. These differences are due to higher mechanical mixing as a result of the increased density of roughness elements at DC. Finally, the vertical distribution of turbulent heat fluxes verifies a maximum atop the canopy crown (2.6 h) when compared with the subcanopy (0.6 h) and above canopy (5.1 h), where h is the mean canopy height. We argue that these spatial and vertical variations of sensible heat fluxes result from the complex scale aggregation of energy fluxes over a heterogeneous canopy.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/2014JD022338},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\LRI84MLE\\Starkenburg et al. - 2015 - Temperature regimes and turbulent heat fluxes acro.pdf;C\:\\Users\\Me\\Zotero\\storage\\B9EYD49C\\2014JD022338.html},
+  keywords = {Alaskan boreal forests,heterogeneous canopy architecture,sensible heat flux spatial variability,turbulent energy fluxes},
+  langid = {english},
+  number = {4}
+}
+
 @article{starkReframingTropicalSavannization2020,
   title = {Reframing Tropical Savannization: Linking Changes in Canopy Structure to Energy Balance Alterations That Impact Climate},
   shorttitle = {Reframing Tropical Savannization},
@@ -7429,6 +7594,22 @@
   abstract = {The subject of this paper, sun leaves are thicker and show higher photosynthetic rates than the shade leaves, is approached in two ways. The first seeks to answer the question: why are sun leaves thicker than shade leaves? To do this, CO2 diffusion within a leaf is examined first. Because affinity of Rubisco for CO2 is low, the carboxylation of ribulose 1,5-bisphosphate is competitively inhibited by O2, and the oxygenation of ribulose 1,5-bisphosphate leads to energy-consuming photorespiration, it is essential for C3 plants to maintain the CO2 concentration in the chloroplast as high as possible. Since the internal conductance for CO2 diffusion from the intercellular space to the chloroplast stroma is finite and relatively small, C3 leaves should have sufficient mesophyll surfaces occupied by chloroplasts to secure the area for CO2 dissolution and transport. This explains why sun leaves are thicker. The second approach is mechanistic or ‘how-oriented’. Mechanisms are discussed as to how sun leaves become thicker than shade leaves, in particular, the long-distance signal transduction from mature leaves to leaf primordia inducing the periclinal division of the palisade tissue cells. To increase the mesophyll surface area, the leaf can either be thicker or have smaller cells. Issues of cell size are discussed to understand plasticity in leaf thickness.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\X7KFY6SU\\Terashima et al. - 2006 - Irradiance and phenotype comparative eco-developm.pdf;C\:\\Users\\Me\\Zotero\\storage\\UZB7GI26\\489948.html},
   number = {2}
+}
+
+@article{terborghVerticalComponentPlant1985,
+  title = {The {{Vertical Component}} of {{Plant Species Diversity}} in {{Temperate}} and {{Tropical Forests}}},
+  author = {Terborgh, John},
+  date = {1985},
+  journaltitle = {The American Naturalist},
+  volume = {126},
+  pages = {760--776},
+  publisher = {{[University of Chicago Press, American Society of Naturalists]}},
+  issn = {0003-0147},
+  abstract = {Forests are widely observed to contain two or more discrete superimposed strata of plants. In the eastern United States, deciduous forests growing between 30⚬ and 42⚬ north latitude are commonly constructed of three strata: a high canopy of sun-adapted trees, a shade-tolerant herbaceous ground layer, and a midstory of shrubs or small trees, of which the flowering dogwood (Cornus florida) is a prime example. Flowering dogwoods and other woody species occupying ecologically equivalent positions in the forest midstory must depend heavily on sunflecks because up to 80\% of the light penetrating the forest interior is this kind of direct-beam illumination. The light field in the forest interior is simply modeled. Immediately beneath the canopy, the light field (integrated over the daily sun cycle) is characterized by a high horizontal variance, because any point is either in a gap and directly illuminated or under a crown and continuously shaded. Farther down in the forest interior the horizontal variance becomes greatly diminished because the expanding cones of light beneath each gap eventually intersect. Where the cones of light from alternate gaps intersect, the light field becomes horizontally uniform. Plants of the woody middle stratum should grow up to, but not exceed, the upper limit of the horizontally uniform light field. The position of the upper limit of the horizontally uniform light field can be predicted from measurements of the canopy and the angular distribution of light gaps overhead. Such predictions for five climax stands in the southeastern United States agreed quite closely with the median height of trees composing the midstory of these stands. Finally, the shapes of tree crowns can be expected to vary adaptively with the systematic latitudinal decrease in the angle of the sun above the horizon. Consequently, tree crowns at high latitudes are narrowly conical in profile, but those in tropical latitudes tend to be planar or shallowly dome-shaped. As a result, direct light is admitted to high-latitude forests only at sharply inclined angles that do not permit the establishment of a woody midstory. By contrast, light is able to penetrate the canopy of tropical forests at relatively shallow angles, allowing the development of a second tree layer closely beneath the crowns of the first. The vertical dimension of plant species diversity thus seems to be controlled by adaptive responses to physical parameters of the latitudinal gradient.},
+  eprint = {2461255},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\72ZBUBWI\\Terborgh - 1985 - The Vertical Component of Plant Species Diversity .pdf},
+  number = {6}
 }
 
 @article{teskeyResponsesTreeSpecies2015,
