--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3874,6 +3874,24 @@
   number = {2}
 }
 
+@article{liuSeparatingOverstoryUnderstory2017,
+  title = {Separating Overstory and Understory Leaf Area Indices for Global Needleleaf and Deciduous Broadleaf Forests by Fusion of {{MODIS}} and {{MISR}} Data},
+  author = {Liu, Yang and Liu, Ronggao and Pisek, Jan and Chen, Jing M.},
+  date = {2017-03-08},
+  journaltitle = {Biogeosciences},
+  volume = {14},
+  pages = {1093--1110},
+  publisher = {{Copernicus GmbH}},
+  issn = {1726-4170},
+  doi = {10.5194/bg-14-1093-2017},
+  url = {https://bg.copernicus.org/articles/14/1093/2017/},
+  urldate = {2021-06-01},
+  abstract = {{$<$}p{$><$}strong class="journal-contentHeaderColor"{$>$}Abstract.{$<$}/strong{$>$} Forest overstory and understory layers differ in carbon and water cycle regimes and phenology, as well as ecosystem functions. Separate retrievals of leaf area index (LAI) for these two layers would help to improve modeling forest biogeochemical cycles, evaluating forest ecosystem functions and also remote sensing of forest canopies by inversion of canopy reflectance models. In this paper, overstory and understory LAI values were estimated separately for global needleleaf and deciduous broadleaf forests by fusing MISR and MODIS observations. Monthly forest understory LAI was retrieved from the forest understory reflectivity estimated using MISR data. After correcting for the background contribution using monthly mean forest understory reflectivities, the forest overstory LAI was estimated from MODIS observations. The results demonstrate that the largest extent of forest understory vegetation is present in the boreal forest zones at northern latitudes. Significant seasonal variations occur for understory vegetation in these zones with LAI values up to 2–3 from June to August. The mean proportion of understory LAI to total LAI is greater than 30 \%. Higher understory LAI values are found in needleleaf forests (with a mean value of 1.06 for evergreen needleleaf forests and 1.04 for deciduous needleleaf forests) than in deciduous broadleaf forests (0.96) due to the more clumped foliage and easier penetration of light to the forest floor in needleleaf forests. Spatially and seasonally variable forest understory reflectivity helps to account for the effects of the forest background on LAI retrieval while compared with constant forest background. The retrieved forest overstory and understory LAI values were compared with an existing dataset for larch forests in eastern Siberia (40–75° N, 45–180° E). The retrieved overstory and understory LAI is close to that of the existing dataset, with an absolute error of 0.02 (0.06), relative error of 1.3 \% (14.3 \%) and RMSE of 0.93 (0.29) for overstory (understory). The comparisons between our results and field measurements in eight forest sites show that the \emph{R}\textsuperscript{2} values are 0.52 and 0.62, and the RMSEs are 1.36 and 0.62 for overstory and understory LAI, respectively.{$<$}/p{$>$}},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\CK4ZX8UW\\Liu et al. - 2017 - Separating overstory and understory leaf area indi.pdf},
+  langid = {english},
+  number = {5}
+}
+
 @article{liVariationLeafChlorophyll2018,
   title = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests: {{Association}} with Gross Primary Productivity},
   shorttitle = {Variation in Leaf Chlorophyll Concentration from Tropical to Cold-Temperate Forests},
