--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -342,16 +342,16 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Accordingly, heat, associated with increase in temperature and VPD even under adequete water can cause greater tree hydraulic stress and altered and soil-water dynamics than milder drought, due to increased $T_{leaf}$ and $gs$ limitation [@ruehrWaterAvailabilityDominant2016].  However, soil water loss during drought effects larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate]. Further, heat with drought exacerbates tree stress [@ruehrWaterAvailabilityDominant2016]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
+Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Accordingly, heat, associated with increase in temperature and VPD even under adequete water can cause greater tree hydraulic stress and altered and soil-water dynamics than milder drought, particulary in temperate species [@ruehrWaterAvailabilityDominant2016]. However, soil water loss during drought effects larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate]. Further, heat with drought exacerbates tree stress [@ruehrWaterAvailabilityDominant2016]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
 
-Phenologically, understory growth can be more sensitive to annual warming than canopy in temperate-deciduous forests, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019]. Increase in summer temperature in mesic temperate forests is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves in temperate forests can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014].
+Phenologically in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014].
 
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
+However, evidence in tropical forests also shows that higher nighttime temperatures is associated with decelarating tree growth rates predominantly in smaller trees, but not restricted to, perhaps because increase in nighttime metabolic respiration could supress growth [*Clark 2010; 2013; Feeley et al. 2007*]. It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. Further, interacting biophysical and biological stressors also show that stress sensitivity and ability to tolerate number of stressors increases with height. Partly because NSC reserves are greater in taller trees due to available light than in buffered trees that are light and NSC limited, therefore making buffered small trees more sensitive to stress [@niinemetsResponsesForestTrees2010a]. In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. 
+
 However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
-It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. Similarly, in tropical forests, decelarating tree growth rates predominantly in smaller trees, but not restricted to, are associated with higher nighttime temperatures that increase nighttime metabolic respiration potentially supressing growth [*Clark 2010; 2013; Feeley et al. 2007*]. Further, interacting biophysical and biological stressors also show that stress sensitivity and ability to tolerate number of stressors increases with height. Partly because NSC reserves are greater in taller trees due to available light than in buffered trees that are light and NSC limited, therefore making buffered small trees more sensitive to stress [@niinemetsResponsesForestTrees2010a].
-In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
 
@@ -379,20 +379,19 @@ Having established how physical conditions and biological form and function vary
 
 ## Global change responses
 
-The complex interactions of the biophysical environment and biological--leaf traits, metabolic processes and distribution of trees--are highly interconneced, resulting in feedbacks to another. Therefore, climate-driven changes, such as rising temperature, can have implications to forests on many levels.  
+The complex interactions of the biophysical environment and biological--leaf traits, metabolic processes and distribution of trees--are highly interconneced, resulting in feedback loops to another. Therefore, climate-driven changes have implications on forests at many levels.  
 
-### canopy disturbance
+### canopy disturbance and global warming
 
-[*jumbled sentences to work on*]
-Canopy buffering is crucial to microclimate functioning, which is influenced by hydrological-cycle at large [Davis et al. 2019]. Frequent and severe droughts show increasing larger tree mortality in forests globally [@senfCanopyMortalityHas2018a; @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Hydraulic limitation in forests also alters species thermoregulation [@sastry_leaf_2018]. Further, increase in canopy temperature is also associated with GPP reduction in the tropics. -Increasing temperatures increase in canopy $T_{leaf}$ sometimes beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. 
+Canopies are crucial to microclimatic functioning, as they buffer several aspects of the microenvironment. This buffering is influenced by the hydraulogical-cycle at large, therefore severe droughts place canopies at risk, particularly larger trees that suffer more during droughts. Further, increase in global temperatures has shown that canopies of temperate and tropical forests function close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Increase in such canopy $T_{leaf}$ reduces forest GPP, specifically in the tropics, where thermal limits are narrower than temperate forests.
 
-Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Recent adavances in canopy studies further show large loss of canopies in Europe caused by wind-induced disturbance and anthropogenic deforestation [Cornelius Senf, 2021; @senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020]. Loss of big trees (e.g.@senfCanopyMortalityHas2018a ) would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity and composition which changes understory species composition and soil fertility [*@majasalmiImpactTreeCanopy2020*].Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
+Canopy structure affects understory species composition and soil fertility which has been shown to shift under macroclimatic warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Macroclimatic warming will disproportionately affect the less warm-adapted functional types within the forest canopy, despite buffering dampening extreme effects, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), with associated understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. This imposes an increasing threat to fauna in microrefugias that are  otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013].
 
-### warming
+Warming shifts forest composition, from leaf metabolism to whole forest structure. At a leaf metabolism level, fluxnet global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021]. This can also potentially alter species thermoregulation [@sastry_leaf_2018]. Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Feedback loops from loss of big trees through natural disturbance or anthropogenic (e.g.@senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
 
-While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to fauna in microrefugias [@scheffersMicrohabitatsReduceAnimal2013]. Heatwave and temperature  can alter understory tree grwoth rates, canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019]. At a leaf metabolism level, fluxnet global data analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021].
+While climate change driven forest shifts are observed, certain forests are more resilient to warming and droughts than others, such as African rainforests [Amy Bennett's paper]. Forest resiliency is also observed through increasing temperature acclimation [martijn's paper and others] and reversible recovery of canopy heat stress [Smith et al. 2020] among other mechanisms [for eg. *REF*]
 
-Differential mortality within the canopy structure will alter the profile of metabolism and hence emergent forest function. Such alteration to canopy structure may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
+These shifts in forest structure at large may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
 ## Scaling across space and time 
 
@@ -434,8 +433,6 @@ Because most CBMs are spatially implicit within grid cells, direct and diffuse p
 - However, when we ask the critical question of how the temperature sensitivities  of metabolism and woody growth varies across these different environments, we can't say much-- there are only a small number of studies, often showing insignificant differences or mixed results.
 - We lean towards the conclusion that while large canopy trees ware the most vulnerable to warming when combined with drought, understory trees may be more vulnerable under more mesic conditions, but more research is needed. 
 - Critically, change to the vertical gradient--e.g., through increased mortality of canopy trees--will change processses across forest strata, with potentially dramatic consequences. (some of the literature on forest degredation or fragmentation could inform what happens when those gradients change)
-
-
 
 
 ## SI files
